# dmarc_analyzer

./: .gitignore  Cargo.toml  README.md  Rocket.toml  config.cfg
src/: main.rs
src/config/: arguments.rs  mod.rs
src/db/: mod.rs
src/imap_extract/: mod.rs
src/report/: mod.rs  serde_defs.rs
static/css/: style.css
static/js/: allreports.js
templates/: all_reports.html.tera  base.html.tera  fetched.html.tera  index.html.tera
templates/error/: 404.tera
templates/macros/: plot.html.tera  utils.html.tera
