[package]
name = "dmarc_analyzer"
version = "0.3.0"
authors = ["Aaron Lauterer <aaron@lauterer.at>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
configparser = "2.0.0"
rusqlite = "0.24.2"
structopt = { version = "0.3", default-features = false}
log = "0.4.14"
zip = { version = "0.5", features = ["deflate"] }
libflate = "1"
mailparse = "0.13.0"
native-tls = "0.2.4"
imap = "2.4.1"
anyhow = "1.0.38"
serde-xml-rs = "0.4"
chrono = "0.4.19"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
